--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## MULTIPART (MultipartProperties)
 
 spring.application.name=image-service
-server.port=8083
+server.port=80
 # test
 #eureka.instance.preferIpAddress=true
 #eureka.instance.ip-address=18.218.219.51
@@ -10,10 +10,9 @@ eureka.client.serviceUrl.defaultZone=http://ec2-18-218-219-51.us-east-2.compute.
 #eureka.client.serviceUrl.defaultZone=http://localhost:8765/eureka/
 ################################################
 # redis
-spring.redis.host=redis-17883.c1.us-west-2-2.ec2.cloud.redislabs.com
-spring.redis.password=mo4Fu8L7HtkZmxv4PKvQOTsMvXHKS4d0
+spring.redis.host=localhost
 spring.redis.timeout=5000
-spring.redis.port=17883
+spring.redis.port=6379
 ################################################
 # mysql
 spring.jpa.hibernate.ddl-auto=update
